deployment-shipment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-service-deployment
  labels:
    app: shipment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipment-service
  template:
    metadata:
      labels:
        app: shipment-service
    spec:
      containers:
        - name: shipment-container
          image: danijelsudimac/shipment-service:v2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shipment-service
spec:
  type: ClusterIP
  selector:
    app: shipment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
