deployment-tracking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service-deployment
  labels:
    app: tracking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
        - name: tracking-container
          image: danijelsudimac/tracking-service:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
spec:
  type: ClusterIP
  selector:
    app: tracking-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
